# RoboSense-Fusion

./: README.md  installation_and_setup.md  installation_setup.md
doc/: camera_pipeline.md  initial_setup.md  workspace_setup.md
install/: local_setup.sh  setup.sh
install/camera_detection/share/ament_index/resource_index/package_run_dependencies/: camera_detection
install/camera_detection/share/camera_detection/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/camera_detection/share/camera_detection/cmake/: camera_detectionConfig-version.cmake  camera_detectionConfig.cmake
install/camera_detection/share/camera_detection/environment/: ament_prefix_path.dsv  path.dsv
install/camera_node/lib/camera_node/: camera_node
install/camera_node/share/camera_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/camera_node/share/camera_node/cmake/: camera_nodeConfig-version.cmake  camera_nodeConfig.cmake
install/camera_node/share/camera_node/environment/: ament_prefix_path.dsv  path.dsv
install/camera_preprocess/share/camera_preprocess/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_preprocess/share/camera_preprocess/cmake/: camera_preprocessConfig-version.cmake  camera_preprocessConfig.cmake
install/camera_preprocess/share/camera_preprocess/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/StereoPTPSyncNode/: CMakeLists.txt  package.xml
src/StereoPTPSyncNode/src/: stereo_ptp_sync_node.cpp
src/camera_detection/: CMakeLists.txt  package.xml
src/camera_node/: CMakeLists.txt  package.xml
src/camera_node/src/: camera_node.cpp  dual_camera_node.cpp  main.cpp
src/camera_preprocess/: CMakeLists.txt
src/stereo_pointcloud/: CMakeLists.txt  package.xml
src/stereo_pointcloud/src/: stereo_pointcloud_node.cpp
(+5 files in other folders)
